fixed gap in between header, main, and footer. fixed bgc of wrapper

--- a/dev/scss/_resets.scss
+++ b/dev/scss/_resets.scss
@@ -25,3 +25,7 @@ table {
 body {
     margin: 0;
 }
+
+ul {
+    margin: inherit
+}
