--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -4,15 +4,18 @@
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
+body {
+    background-color: $perimeter-bgc;
+}
+
 .wrapper {
     max-width: 1410px;
     margin: 0 auto;
-    background-color: $wrapper-bgc;
+    background-color: #fff;
     font-family: $font
 }
 
 main {
-    background-color: #fff;
     width: 100%;
     margin: 0 auto;
 }
